<resources>
    <string name="app_name">ThesisPicker</string>

    <!-- Login screen-->
    <string name="login">Вписване</string>
    <string name="login_egn">ЕГН</string>
    <string name="login_faculty_number">Факултетен номер</string>
    <string name="button_sign_in">Вход</string>
    <string name="wait_message">Моля изчакайте...</string>
    <string name="nonexistant_user">Грешни входни данни</string>
    <string name="nonexistant_user_message">Потребител с въведените ЕГН и факултетен номер не съществува.</string>
    <string name="error_field_required">Полето е задължително</string>

    <!--Menu-->
    <string name="menu_student_profile">Студентски профил</string>
    <string name="menu_teachers">Преподаватели</string>
    <string name="menu_theses">Дипломни задания</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!--Students screen-->
    <string name="student_fac_number">Фак.№:</string>
    <string name="student_specialty">Специалност:</string>
    <string name="student_admin_group">Група:</string>
    <string name="student_is_bachelor">Образователно-квалификационна степен:</string>
    <string name="student_chosen_thesis">Избрано дипломно задание:</string>
    <string name="student_thesis_lead">Ръководител:</string>
    <string name="student_thesis_reviewer">Рецензент:</string>
    <string name="student_bachelor">бакалавър</string>
    <string name="student_master">магистър</string>

    <!--Teachers screen-->
    <string name="teacher_phone">Телефон за връзка:</string>
    <string name="teacher_email">Еmail:</string>
    <string name="nonexistant_teacher_info_message">Няма налични данни за избрания преподавател.</string>

    <!--Thesis screen-->
    <string name="thesis_title">Дипломно задание:</string>
    <string name="thesis_details">Детайли:</string>
    <string name="thesis_lead">Ръководител:</string>
    <string name="nonexistant_thesis_info_message">Няма налични данни за избраната тема.</string>
    <string name="button_choose">Избери</string>
    <string name="thesis_already_picked">Дипломното задание вече е избрано или вие имате записана друга тема.</string>
    <string name="thesis_picked">Успешно избрахте дипломното задание.</string>

    <!--Common-->
    <string name="name">Име и фамилия:</string>
    <string name="close">Затвори</string>
    <string name="nonexistant_info">Неналични данни.</string>
</resources>
