<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginEnd="20dp"
    android:layout_marginStart="20dp"
    android:clickable="true"
    android:orientation="vertical">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/egn_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        app:errorEnabled="true">

        <EditText
            android:id="@+id/login_egn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_egn"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:maxLength="10"
            android:paddingBottom="15dp"
            android:paddingTop="20dp"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/fac_number_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:errorEnabled="true">

        <EditText
            android:id="@+id/login_fac_num"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_faculty_number"
            android:imeOptions="actionGo"
            android:inputType="text"
            android:maxLength="10"
            android:paddingBottom="15dp"
            android:paddingTop="20dp"/>
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/login"
        android:layout_height="57dp"
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/button_sign_in" />

</LinearLayout>

